@@ -56,4 +56,20 @@ class Framework_StringReplacer extends PHPUnit_Framework_TestCase
 
         $this->assertEquals($output, $result);
     }
+
+    function test_linkrefs()
+    {
+        $input = "This is a sample message [1] to test the new linkref [ref0] replacement feature of [Roundcube].\n";
+        $input.= "\n";
+        $input.= "[1] http://en.wikipedia.org/wiki/Email\n";
+        $input.= "[ref0] www.link-ref.com\n";
+
+        $replacer = new rcube_string_replacer;
+        $result = $replacer->replace($input);
+        $result = $replacer->resolve($result);
+
+        $this->assertContains('[<a href="http://en.wikipedia.org/wiki/Email">1</a>] to', $result, "Numeric linkref replacements");
+        $this->assertContains('[<a href="http://www.link-ref.com">ref0</a>] repl', $result, "Alphanum linkref replacements");
+        $this->assertContains('of [Roundcube].', $result, "Don't touch strings wihtout an index entry");
+    }
 }
